# frontend

./: .env.example  .gitignore  .replit  =1.0.0  COMPLETE_PROJECT_README.md  COMPREHENSIVE_PROJECT_ANALYSIS.md  README.md  file_server.py  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_pytorch.txt  run_backend.py  setup_real_data.py  simple_main.py  simple_test.py  test_api.json  test_gemini_direct.py  test_ncf_performance.py  test_new_system.py  test_user_journey.py
CarFin_Python_Files/: README.md  pyproject.toml
CarFin_Python_Files/backend/: simple_main.py
CarFin_Python_Files/data_crawler/: aws_encar_crawler.py  encar_sample_data.py
CarFin_Python_Files/ml_engine/: recommendation_engine.py
agents/: enhanced_vehicle_data_agent.py  gemini_recommendation_agent.py  universal_vehicle_data_layer.py
attached_assets/: README_new_1757926288596.md
backend/: main.py  vehicle_api_routes.py
carfin-ui/: package-lock.json  package.json
claudedocs/: integration_summary.md  vehicle_data_integration_architecture.md
config/: database.py
data/: create_tables.sql  data_sources.md  encar_crawler.py  generate_ncf_dataset.py  ncf_interactions.csv  ncf_users.csv  ncf_vehicles.csv  real_data_integration_plan.md
database/: array_optimization_strategy.py  connection.py  optimized_vehicle_schema.py  realtime_learning.py
docs/: framework_comparison.md
frontend/: package-lock.json  vite.config.ts
mcp/: carfinance_mcp_server.py
models/: academic_recommendation_system.py  keras_recommendation_models.py  ncf_car_recommendation.py  pytorch_ncf_real.py  real_ncf_engine.py
(+77 files in other folders)
