[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    # ðŸŽ¯ Core FastAPI + Multi-Agent AI
    "fastapi>=0.116.1",
    "google-genai>=1.37.0",
    "crewai>=0.186.1",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.9",
    "python-multipart>=0.0.20",

    # ðŸ§  ë…¼ë¬¸ ê¸°ë°˜ ì¶”ì²œì‹œìŠ¤í…œ ë¼ì´ë¸ŒëŸ¬ë¦¬ (PyCaret ì œê±°)
    "tensorflow>=2.17.0",           # Keras í¬í•¨ - Neural CF, Wide&Deep
    "tensorflow-recommenders>=0.7.3", # Google ì¶”ì²œì‹œìŠ¤í…œ ì „ìš©
    "scikit-surprise>=1.1.3",      # Matrix Factorization ì „ë¬¸
    "lightfm>=1.17",               # Hybrid CF+Content
    "implicit>=0.7.2",             # BPR, Fast ALS

    # ðŸ“Š ë°ì´í„° ì²˜ë¦¬ + ML
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.11.0",

    # ðŸ—„ï¸ ë°ì´í„°ë² ì´ìŠ¤
    "sqlalchemy>=2.0.43",
    "psycopg2-binary>=2.9.10",

    # ðŸ› ï¸ ê¸°íƒ€ ìœ í‹¸ë¦¬í‹°
    "openai>=1.107.2",
    "trafilatura>=2.0.0",
]
