[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.186.1",
    "fastapi>=0.116.1",
    "numpy>=2.3.3",
    "openai>=1.107.2",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.43",
    "trafilatura>=2.0.0",
    "uvicorn>=0.35.0",
]
